# File-Pattern-Analysis

file-deduplicator/: README.md  deduplicator.db  pyproject.toml  run.py
file-deduplicator/app/: server.py
file-deduplicator/app/static/: app.js  style.css
file-deduplicator/app/templates/: index.html
file-deduplicator/chroma_db/d4496d47-9cad-449e-8291-2fb99f4ccd8a/: index_metadata.pickle
file-deduplicator/src/: __init__.py  crawler.py  database.py  hasher.py  indexer.py  main.py  reader.py  scanner.py
